# sleight-of-hand

./: .gitignore  AGENTS.md  README.md  go.mod  hatch_build.py  integration_test.go  main.go  pyproject.toml
.github/workflows/: release.yml
cmd/: install.go  root.go  uninstall.go
internal/completion/: completion.go
internal/dispatch/: dispatch.go
internal/lookup/: lookup.go
internal/passthrough/: passthrough.go
tools/gh/: gh.go
tools/gh/pr/: pr.go  retry.go
